--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="./images/company-logo-white.svg" alt="logo" />
         </div>
         <div class="title-page__body">
-          <div class="title-page__title"><h1>PARTNER WITH KONSTUCT</h1></div>
+          <div class="title-page__title"><h1>PARTNER WITH KONSTRUCT</h1></div>
           <div class="title-page__sub-title">
             <span>An award-winning construction management firm</span>
           </div>
