--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/style.min.css?_v=20230615135050" />
+    <link rel="stylesheet" href="css/style.min.css?_v=20230615151113" />
     <title>Konstruct</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
           <img src="./images/company-logo-white.svg" alt="logo" />
         </div>
         <div class="title-page__body">
-          <div class="title-page__title"><h1>PARTNER WITH KONSTRUCT</h1></div>
+          <div class="title-page__title"><h1>PARTNER WITH KONSTUCT</h1></div>
           <div class="title-page__sub-title">
             <span>An award-winning construction management firm</span>
           </div>
@@ -367,6 +367,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/app.min.js?_v=20230615135050"></script>
+    <script src="js/app.min.js?_v=20230615151113"></script>
   </body>
 </html>
